# NoRMA

./: .gitignore  TODO.md  imu_dimensions.md  odom_eval.md
norma_bringup/: CMakeLists.txt  package.xml
norma_bringup/launch/: laser_scan_merger.launch  lidars.launch  one_lidar_imu_bringup.launch  rs_laserscan.launch  sensors.launch  spatial.launch  tf_publisher.launch  two_lidar_bringup.launch  two_lidar_imu_bringup.launch  urg_lidar.launch
norma_bringup/rviz/: imu.rviz  lidar.rviz  rs_laserscan.rviz
norma_bringup/src/: imu_roatation.py  lidar_yaw_setup.py  merge_scans.cpp  rear_view_visualization.py
norma_nav/: CMakeLists.txt  package.xml
norma_nav/launch/: amcl_diff.launch  joy_measurements.launch  laser_odometry_csm.launch  laser_scan_matching.launch  local_costmap.launch  mapping_default.launch  move_base.launch  pid_testing.launch  real_gmapping.launch  real_hector.launch  real_hector_one_lidar_imu.launch  robot_localization_scan_matching.launch  trajectory.launch  trying_amcl_scan_matching.launch  trying_bad_odom_amcl.launch  turtlebot3_navigation.launch
norma_nav/launch/nav/: amcl_diff.launch  (+2 more)
norma_nav/maps/: broken_trimmed_niniety_deg.yaml  hector_slam_organised.yaml  house_map.pgm  lab_map.yaml  lab_map_broken_dual.yaml.yaml
norma_nav/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  laser_odometry_node_default.yaml  local_costmap_params.yaml
norma_nav/rviz/: collision_avoidance_config.rviz  config.rviz  gmapping.rviz  laser.rviz  nav.rviz  tf.rviz
norma_nav/src/: collision_checker.cpp  pose_to_goal.py  scan_matching_vel.py
(+114 files in other folders)
