<?xml version="1.0"?>
<package format="2">
  <name>norma_bringup</name>
  <version>0.0.0</version>
  <description>The norma_bringup package</description>
  <maintainer email="adam@todo.todo">adam</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>imu_filter_madgwick</depend>
  <depend>phidgets_spatial</depend>
  <depend>nodelet</depend>
  <depend>urg_node</depend>
  <depend>robot_state_publisher</depend>
  <exec_depend>rplidar_ros</exec_depend>
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>laser_geometry</depend>
  <depend>ira_laser_tools</depend>
  <depend>librealsense2</depend>
  <depend>realsense2_camera</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>cv_bridge</depend>


  <export>
  </export>
</package>
